--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,5 +9,7 @@
   <body>
     <h1>Homepage</h1>
     <a href="/log-out">Logout</a>
+    <%- include('uploadFile') %> <%- include('createFolder') %>
+    <a href="/drive/my-drive">My Drive</a>
   </body>
 </html>
