--- a/views/downloadFile.ejs
+++ b/views/downloadFile.ejs
@@ -1,5 +1,5 @@
 <% if (locals.file) { %>
 <form action="/drive/files/download/<%= file.id %>" method="post">
-  <button>Download</button>
+  <button class="btn">Download</button>
 </form>
 <% } %>
