--- a/views/uploadFile.ejs
+++ b/views/uploadFile.ejs
@@ -3,8 +3,8 @@
   enctype="multipart/form-data"
   method="post"
 >
-  <div class="form-data">
+  <div class="upload-form form-data">
     <input type="file" class="form-control-file" name="file" />
-    <input type="submit" value="Submit" class="btn btn-default" />
+    <button class="btn">Upload</button>
   </div>
 </form>
