--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,132 @@
 :root {
+    --box-shadow: 0 2px 10px hsl(0, 0%, 0%, .1);
+
+    --clr-gray: hsl(0, 0%, 50%);
     --clr-danger: hsl(0, 80%, 50%);
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    font-size: inherit;
+    font-family: inherit;
+    font-weight: inherit;
+    box-sizing: border-box;
+}
+
+ul {
+    list-style: none;
+}
+
+button {
+    cursor: pointer;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: hsl(200, 15%, 15%);
 }
 
 .form-error {
     color: var(--clr-danger);
+}
+
+.form-container {
+    max-width: 25rem;
+    margin: auto;
+    margin-top: 4rem;
+    padding: 1.5rem;
+    color: #fff;
+    background-color: hsl(200, 73%, 26%);
+    box-shadow: var(--box-shadow);
+    position: relative;
+    border-radius: 6px;
+}
+
+.form-title {
+    font-size: 2rem;
+    width: fit-content;
+    margin: 0 auto 1rem;
+}
+
+.form-container form {
+    display: grid;
+    gap: 1rem;
+}
+
+.form-container form label:not([class="checkbox-label"]) {
+    display: grid;
+    gap: .3rem;
+}
+
+input {
+    font-size: .9rem;
+    padding: .5rem;
+    background-color: hsl(0, 0%, 98%);
+    border: 1px solid hsl(0, 0%, 80%);
+}
+
+input:focus {
+    outline: none;
+    border: 1px solid hsl(200, 80%, 70%);
+}
+
+.checkbox-label {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    width: fit-content;
+    cursor: pointer;
+}
+
+.checkbox-label input {
+    cursor: pointer;
+}
+.checkbox-label span {
+    order: 2;
+}
+
+.form-btn {
+    font-weight: 500;
+    padding: .5rem;
+    border: 0;
+    color: #fff;
+    background-color: hsl(8, 73%, 56%);
+    margin-top: 1rem;
+}
+
+.form-redirect {
+    margin-top: 1rem;
+}
+
+.form-redirect a {
+    color: hsl(200, 80%, 70%);
+}
+
+.create-post {
+    max-width: 35rem;
+}
+
+.msg-area {
+    height: 12ch;
+    resize: none;
+}
+
+.form-redirect.cancel {
+    justify-self: end;
+}
+
+.form-error,
+.form-redirect.cancel a {
+    color: hsl(0, 80%, 60%);
+}
+
+input.error {
+    border-color: hsl(0, 80%, 60%);
+}
+
+.form-error {
+    font-size: .9rem;
+    margin-top: .5rem;
+    text-align: center;
 }
