--- a/views/editFolder.ejs
+++ b/views/editFolder.ejs
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Edit Folder</title>
+    <link rel="stylesheet" href="/drive.css" />
   </head>
   <body>
     <% if (locals.folder) { %>
-    <form action="/drive/folders/edit/<%= folder.id %>" method="post">
-      <input type="text" name="name" value="<%= folder.name %>" />
-      <button>Save</button>
+    <form
+      action="/drive/folders/edit/<%= folder.id %>"
+      method="post"
+      class="item-form"
+    >
+      <label for="rename">Rename Folder</label>
+      <input type="text" id="rename" name="name" value="<%= folder.name %>" />
+      <button class="btn">Save</button>
     </form>
     <% } %>
   </body>
