--- a/views/folders.ejs
+++ b/views/folders.ejs
@@ -4,39 +4,113 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= title %></title>
+    <link rel="stylesheet" href="/drive.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
-    <a href="/drive/home">Home</a>
-    <% if (locals.parentId) { %>
-    <a href="/drive/folders/<%= parentId %>">Back</a>
-    <% } %> <%- include('createFolder') %> <%- include('uploadFile') %>
-    <h1><%= title %></h1>
-    <% if (locals.folders && folders.length > 0) { %>
-    <ul>
-      <% for (let dir of folders){ %>
-      <li>
-        <a href="/drive/folders/<%= dir.id %>"><%= dir.name %></a>
-        <a href="/drive/folders/edit/<%= dir.id %>">Rename</a>
-        <a href="/drive/folders/share/<%= dir.id %>">Share</a>
-        <form action="/drive/folders/delete/<%= dir.id %>" method="post">
-          <button>Delete</button>
-        </form>
-      </li>
+    <%- include('header') %>
+    <div class="nav">
+      <% if (locals.parentId) { %>
+      <a href="/drive/folders/<%= parentId %>">
+        <i class="fa fa-long-arrow-left" aria-hidden="true"></i>
+        Back
+      </a>
       <% } %>
-    </ul>
-    <% } %> <% if (locals.files && files.length > 0) { %>
-    <ul>
-      <% for (let file of files){ %>
-      <li>
-        <span><%= file.filename %></span>
-        <a href="/drive/files/details/<%= file.id %>">Details</a>
-        <a href="/drive/files/edit/<%= file.id %>">Rename</a>
-        <form action="/drive/files/delete/<%= file.id %>" method="post">
-          <button>Delete</button>
-        </form>
-      </li>
+      <a href="/drive/home">
+        <i class="fa fa-home" aria-hidden="true"></i>
+        Home
+      </a>
+    </div>
+    <div class="drive-forms">
+      <%- include('uploadFile') %> <%- include('createFolder') %>
+    </div>
+    <div class="folder-content">
+      <% if (locals.folders && folders.length > 0) { %>
+      <ul>
+        <% for (let dir of folders){ %>
+        <li class="pos-r item">
+          <a href="/drive/folders/<%= dir.id %>" class="folder">
+            <i class="fa fa-folder" aria-hidden="true"></i>
+            <%= dir.name %>
+          </a>
+          <div class="item-btns">
+            <a
+              href="/drive/folders/edit/<%= dir.id %>"
+              title="Rename"
+              class="item-btn"
+            >
+              <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+            </a>
+            <a
+              href="/drive/folders/share/<%= dir.id %>"
+              title="Share"
+              class="item-btn"
+            >
+              <i class="fa fa-share" aria-hidden="true"></i>
+            </a>
+            <form action="/drive/folders/delete/<%= dir.id %>" method="post">
+              <button title="Delete" class="item-btn">
+                <i class="fa fa-trash-o" aria-hidden="true"></i>
+              </button>
+            </form>
+          </div>
+        </li>
+        <% } %>
+      </ul>
+      <% } %> <% if (locals.files && files.length > 0) { %>
+      <ul>
+        <% for (let file of files){ %>
+        <li class="pos-r item">
+          <div class="file">
+            <% if (file.mimetype.includes('image')) { %>
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+            <% } else if (file.mimetype.includes('video')) { %>
+            <i class="fa fa-film" aria-hidden="true"></i>
+            <% } else if (file.mimetype.includes('audio')) { %>
+            <i class="fa fa-music" aria-hidden="true"></i>
+            <% } else if (file.mimetype.includes('zip')) { %>
+            <i class="fa fa-file-archive-o" aria-hidden="true"></i>
+            <% } else { %>
+            <i class="fa fa-file-o" aria-hidden="true"></i>
+            <% }%> <%= file.filename %>
+          </div>
+          <div class="item-btns">
+            <a
+              href="/drive/files/details/<%= file.id %>"
+              class="item-btn info-btn"
+              title="Details"
+            >
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path
+                  d="M11 9H13V7H11V9M14 17V15H13V11H10V13H11V15H10V17H14M5 3H19C20.1 3 21 3.89 21 5V19C21 19.53 20.79 20.04 20.41 20.41C20.04 20.79 19.53 21 19 21H5C4.47 21 3.96 20.79 3.59 20.41C3.21 20.04 3 19.53 3 19V5C3 3.89 3.89 3 5 3M19 19V5H5V19H19Z"
+                />
+              </svg>
+            </a>
+            <form action="/drive/files/download/<%= file.id %>" method="post">
+              <button class="item-btn">
+                <i class="fa fa-download" aria-hidden="true"></i>
+              </button>
+            </form>
+            <a
+              href="/drive/files/edit/<%= file.id %>"
+              class="item-btn"
+              title="Rename"
+            >
+              <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+            </a>
+            <form action="/drive/files/delete/<%= file.id %>" method="post">
+              <button class="item-btn" title="Delete">
+                <i class="fa fa-trash-o" aria-hidden="true"></i>
+              </button>
+            </form>
+          </div>
+        </li>
+        <% } %>
+      </ul>
       <% } %>
-    </ul>
-    <% } %>
+    </div>
   </body>
 </html>
