--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,5 +1,7 @@
 <header>
   <h1 class="page-title"><%= title %></h1>
+  <% if (locals.currentUser) { %>
   <div class="name"><%= currentUser.firstname %></div>
   <a href="/log-out" class="logout">Logout</a>
+  <% } %>
 </header>
