--- a/views/sharedFolder.ejs
+++ b/views/sharedFolder.ejs
@@ -4,29 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shared Folder: <% if (locals.title) { %> <%= title %> <% } %></title>
+    <link rel="stylesheet" href="/drive.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <% if (locals.title) { %>
-    <h1><%= title %></h1>
+    <h1 class="page-title"><%= title %></h1>
     <% } %> <% if (locals.expiryTime) { %>
-    <div>Expires: <%= expiryTime %></div>
-    <% } %> <% if (locals.folders && folders.length > 0) { %>
-    <ul>
-      <% for (let dir of folders){ %>
-      <li>
-        <a href="/share/<%= dir.id %>"><%= dir.name %></a>
-      </li>
-      <% } %>
-    </ul>
-    <% } %> <% if (locals.files && files.length > 0) { %>
-    <ul>
-      <% for (let file of files){ %>
-      <li>
-        <span><%= file.filename %></span>
-        <a href="/share/file/details/<%= file.id %>">Details</a>
-      </li>
-      <% } %>
-    </ul>
+    <div class="expiry-date">
+      <i class="fa fa-hourglass-half" aria-hidden="true"></i>
+      Expires: <%= expiryTime %>
+    </div>
     <% } %>
+    <div class="folder-content">
+      <% if (locals.folders && folders.length > 0) { %>
+      <ul>
+        <% for (let dir of folders){ %>
+        <li>
+          <a href="/share/<%= dir.id %>" class="folder">
+            <i class="fa fa-folder" aria-hidden="true"></i><%= dir.name %>
+          </a>
+        </li>
+        <% } %>
+      </ul>
+      <% } %> <% if (locals.files && files.length > 0) { %>
+      <ul>
+        <% for (let file of files){ %>
+        <li class="pos-r item">
+          <div class="file">
+            <% if (file.mimetype.includes('image')) { %>
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+            <% } else if (file.mimetype.includes('video')) { %>
+            <i class="fa fa-film" aria-hidden="true"></i>
+            <% } else if (file.mimetype.includes('audio')) { %>
+            <i class="fa fa-music" aria-hidden="true"></i>
+            <% } else if (file.mimetype.includes('zip')) { %>
+            <i class="fa fa-file-archive-o" aria-hidden="true"></i>
+            <% } else { %>
+            <i class="fa fa-file-o" aria-hidden="true"></i>
+            <% }%> <%= file.filename %>
+          </div>
+          <div class="item-btns">
+            <a href="/share/file/details/<%= file.id %>" class="btn details">
+              Details
+            </a>
+          </div>
+        </li>
+        <% } %>
+      </ul>
+      <% } %>
+    </div>
   </body>
 </html>
